--- a/src/components/sections/Experience.astro
+++ b/src/components/sections/Experience.astro
@@ -1,5 +1,5 @@
 ---
-import { DATA_EXPERIENCE } from '../../data';
+import { DATA_EXPERIENCE } from '../../content/index.astro';
 import { getLangFromUrl, useTranslations } from '../../i18n/utils';
 import { Check } from '../icons/index.astro';
 import { Typography } from '../index.astro';
