--- a/src/components/sections/Stack.astro
+++ b/src/components/sections/Stack.astro
@@ -4,7 +4,7 @@ import { Marquee } from '../index.astro';
 
 import badge from '../../assets/img/stack-badge.svg'
 
-import stack from '../../data/stack';
+import stack from '../../content/stack';
 ---
 
 <section class='bg-secondary-400 dark:bg-secondary-300 h-40 flex justify-center relative z-20'>
