--- a/src/content/sections/about-en.astro
+++ b/src/content/sections/about-en.astro
@@ -4,7 +4,7 @@ import { Typography } from '../../components/index.astro';
 
 <div class='container'>
   <Typography class='h3 font-normal dark:text-white leading-normal mb-10 text-pretty'>
-    👀{' '}
+    👉{' '}
     <span class='font-bold mark-text'>
       <span>I am a specialist in Web Design and Front-End Development.</span>
     </span>
@@ -20,6 +20,6 @@ import { Typography } from '../../components/index.astro';
     design and development projects.
   </Typography>
   <Typography class='h3 font-normal dark:text-white leading-normal text-pretty'>
-    Take a look and let me impress you! 🔥
+    Take a look and let me impress you! 😁
   </Typography>
 </div>
