--- a/src/content/sections/about-es.astro
+++ b/src/content/sections/about-es.astro
@@ -4,7 +4,7 @@ import { Typography } from '../../components/index.astro';
 
 <div class='container'>
   <Typography class='h3 font-normal dark:text-white leading-normal mb-10 text-pretty'>
-    👀{' '}
+    👉{' '}
     <span class='font-bold mark-text'>
       <span>Soy un especialista en Diseño Web y Desarrollo Front-End</span>
     </span>
@@ -20,6 +20,6 @@ import { Typography } from '../../components/index.astro';
     mis proyectos de diseño y desarrollo.
   </Typography>
   <Typography class='h3 font-normal dark:text-white leading-normal text-pretty'>
-    ¡Echa un vistazo y déjame impresionarte! 🔥
+    ¡Echa un vistazo y déjame impresionarte! 😁
   </Typography>
 </div>
