--- a/src/components/core/index.astro
+++ b/src/components/core/index.astro
@@ -1,5 +1,6 @@
 ---
 export { default as BackgroundGrid } from './BackgroundGrid/index.astro';
+export { default as Button } from './Button/index.astro';
 export { default as ButtonMenu } from './ButtonMenu.astro';
 export { default as LangSelector } from './LangSelector.astro';
 export { default as Logo } from './Logo.astro';
