--- a/src/components/shared/Footer.astro
+++ b/src/components/shared/Footer.astro
@@ -1,37 +1,34 @@
 ---
 import { getLangFromUrl, useTranslations } from '../../i18n/utils';
-import { Typography } from '../index.astro';
+import { Button, Typography } from '../index.astro';
 
 const lang = getLangFromUrl(Astro.url);
 const t = useTranslations(lang);
 ---
 
 <footer class='sticky bottom-0 z-0'>
-  <div class='bg-primary-500 dark:bg-primary-300 rounded-t-main py-14 px-14'>
+  <div class='bg-primary-500 dark:bg-primary-300 rounded-t-4xl md:rounded-t-main p-7 md:p-14'>
     <div class='container mx-auto'>
       <div class='grid md:grid-cols-12 gap-6'>
         <div class='md:col-span-8'>
           <div class='flex flex-col gap-4'>
-            <Typography type="h4" class='text-dark'>{t('footer.title')}</Typography>
+            <Typography type='h4' class='text-dark'>{t('footer.title')}</Typography>
             <Typography class='text-dark text-pretty'>{t('footer.description')}</Typography>
           </div>
         </div>
         <div class='md:col-span-4 self-center'>
           <div class='flex justify-end'>
-            <!-- {
-              cta.available ? (
-                <a href={cta.url} class='btn btn-dark text-primary-300'>
-                  {cta.label}
-                </a>
-              ) : (
-                <div
-                  class='tooltip before:bg-secondary-300 before:text-dark before:rounded-xl after:border-t-secondary-300'
-                  data-tip={cta.availableMsg}
-                >
-                  <span class='btn btn-dark text-primary-300 opacity-60'>{cta.label}</span>
-                </div>
-              )
-            } -->
+            <Button
+              tag='a'
+              href='/contact'
+              class='text-primary-300'
+              variant='filled'
+              color='dark'
+              size='lg'
+              disabled
+            >
+              {t('footer.cta')}
+            </Button>
           </div>
         </div>
       </div>
