--- a/src/components/core/index.astro
+++ b/src/components/core/index.astro
@@ -6,6 +6,7 @@ export { default as LangSelector } from './LangSelector.astro';
 export { default as Logo } from './Logo.astro';
 export { default as Marquee } from './Marquee.astro';
 export { default as ProjectsList } from './Projects/List.astro';
+export { default as Sidebar } from './Sidebar/index.astro';
 export { default as SwitchScheme } from './SwitchScheme.astro';
 export { default as Typography } from './Typography/index.astro';
 ---
