--- a/src/layouts/PageLayout.astro
+++ b/src/layouts/PageLayout.astro
@@ -1,22 +1,25 @@
 ---
-import { getLangFromUrl } from "../i18n/utils";
+import type { PageLayoutProps } from "../types";
+
+import { ViewTransitions } from "astro:transitions";
 import "@fontsource-variable/syne";
 
-import "../css/styles.css";
-import Header from "../components/shared/Header.astro";
-import Footer from "../components/shared/Footer.astro";
-import { ViewTransitions } from "astro:transitions";
-import HeaderPage from "../components/ui/HeaderPage.astro";
+import { getLangFromUrl } from "../i18n/utils";
 
-interface Props {
-  title: string;
-  breadcrumbs: any[];
-}
+import { Header, Footer } from "../components/shared/index.astro";
+import HeaderPage from "../components/ui/HeaderPage.astro";
+import { Sidebar } from "../components/index.astro";
+
+import "../css/styles.css";
+
+type Props = PageLayoutProps;
 
 const { props } = Astro;
 
-const { title, breadcrumbs } = props;
+const { title, breadcrumbs, nav } = props;
 const lang = getLangFromUrl(Astro.url);
+
+const hasNav = nav && Object.keys(nav)?.length;
 ---
 
 <!doctype html>
@@ -36,11 +39,15 @@ const lang = getLangFromUrl(Astro.url);
     <main class="bg-white dark:bg-dark relative z-10">
       <div class="container mx-auto">
         <HeaderPage title={title} {breadcrumbs} />
-        <div class="grid grid-cols-3 px-5 py-10">
-          <div class="col-span-1">
-            Nav Menú
-          </div>
-          <div class="col-span-2">
+        <div class="grid grid-cols-8 px-5 py-10 gap-12 md:gap-4">
+          {
+            hasNav && (
+              <div class="col-span-8 md:col-span-2">
+                <Sidebar data={nav} />
+              </div>
+            )
+          }
+          <div class={nav ? "col-span-8 md:col-span-6" : "col-span-8"}>
             <slot />
           </div>
         </div>
