--- a/src/components/core/SwitchScheme.astro
+++ b/src/components/core/SwitchScheme.astro
@@ -3,7 +3,7 @@ import { TbMoonFilled, TbMoonOff } from 'react-icons/tb';
 ---
 
 <div
-  class='schemeSelector transition flex items-center justify-center w-8 h-8 aspect-square p-1 rounded-full bg-dark/5 dark:bg-white/5 hover:bg-dark/10 dark:hover:bg-white/10 cursor-pointer'
+  class='schemeSelector transition-colors flex items-center justify-center w-8 h-8 aspect-square p-1 rounded-full bg-dark/5 dark:bg-white/5 hover:bg-dark/10 dark:hover:bg-white/10 cursor-pointer'
 >
   <div class='hidden dark:block text-dark/60 dark:text-white'><TbMoonFilled /></div>
   <div class='dark:text-white/40 block dark:hidden'><TbMoonOff /></div>
