--- a/src/components/sections/Projects.astro
+++ b/src/components/sections/Projects.astro
@@ -23,7 +23,7 @@ const projectList = await filterProjects({ projects, lang, limit: PROJECTS_LIMIT
       </Typography>
       <Typography
         type='h5'
-        class='transition dark:text-white/60 dark:hover:text-white/70 text-dark/60 hover:text-dark/70 ml-auto'
+        class='transition-colors dark:text-white/60 dark:hover:text-white/70 text-dark/60 hover:text-dark/70 ml-auto'
       >
         <a href={translatePath('/projects')} class='text-inherit'>{t('home.projects.seeAll')}</a>
       </Typography>
