--- a/src/components/shared/Header.astro
+++ b/src/components/shared/Header.astro
@@ -19,7 +19,7 @@ const { lang: langSelector = true } = props || {};
 
 <header class="sticky top-0 left-0 right-0 z-50 px-4 pt-4 h-16">
   <div
-    class="container flex items-center justify-between gap-4 p-3 px-8 m-auto transition rounded-main backdrop-blur-md bg-white/60 dark:bg-dark/60"
+    class="container flex items-center justify-between gap-4 p-3 px-8 m-auto rounded-main backdrop-blur-md bg-white/60 dark:bg-dark/60"
   >
     <a
       href={translatePath("/")}
