--- a/src/css/mark-text.css
+++ b/src/css/mark-text.css
@@ -7,18 +7,16 @@
 }
 
 .mark-text span {
-  background: linear-gradient(90deg, theme('colors.primary.300') 50%, transparent 50%) 110%
-    0 / 200% 100% no-repeat;
+  background: linear-gradient(
+      90deg,
+      theme("colors.primary.300") 50%,
+      transparent 50%
+    )
+    110% 0 / 200% 100% no-repeat;
   background-position: calc((1 - var(--highlighted)) * 110%) 0;
   transition: background-position 1s, color 1s;
   @apply px-1;
 }
-
-/* .mark-text:after {
-  content: attr(data-text);
-  font-weight: inherit;
-  @apply absolute inline top-0 left-0 bg-red-500 bg-clip-text text-transparent;
-} */
 
 @keyframes highlight {
   to {
