--- a/src/components/core/Logo.astro
+++ b/src/components/core/Logo.astro
@@ -1,4 +1,4 @@
-<div class='flex items-center justify-center p-1 transition w-9 md:w-12 h-9 md:h-12'>
+<div class='flex items-center justify-center p-1 w-9 md:w-12 h-9 md:h-12'>
   <svg class='w-full h-full' viewBox='0 0 53 40' fill='none' xmlns='http://www.w3.org/2000/svg'>
     <title>Arsi logo</title>
     <path
