--- a/src/components/ui/Nav.astro
+++ b/src/components/ui/Nav.astro
@@ -28,7 +28,7 @@ const isThisPage = (pageUrl = '', currentPath = '', lang = '') => {
         <li>
           <a
             href={path}
-            class={`block text-2xl text-center lg:text-xl font-bold text-dark dark:text-white font-Syne transition hover:opacity-80 ${
+            class={`block text-2xl text-center lg:text-xl font-bold text-dark dark:text-white font-Syne transition-opacity hover:opacity-80 ${
               isActive ? '' : 'opacity-60'
             }`}
           >
