--- a/src/components/core/Projects/Card.astro
+++ b/src/components/core/Projects/Card.astro
@@ -1,9 +1,9 @@
 ---
-import { Image } from 'astro:assets';
-import { GoArrowRight } from 'react-icons/go';
+import { Image } from "astro:assets";
+import { GoArrowRight } from "react-icons/go";
 
-import { Typography } from '../index.astro';
-import { getLangFromUrl, useTranslatedPath } from '../../../i18n/utils';
+import { Typography } from "../index.astro";
+import { getLangFromUrl, useTranslatedPath } from "../../../i18n/utils";
 
 const lang = getLangFromUrl(Astro.url);
 const translatePath = useTranslatedPath(lang);
@@ -12,44 +12,53 @@ const { project } = Astro.props;
 const { category, title, image, name } = project || {};
 ---
 
-<article class='group relative'>
-  <a href={`${translatePath(`/projects`)}/${name}`} class='flex aspect-[4/3]'>
+<article class="group relative">
+  <a href={`${translatePath(`/projects`)}/${name}`} class="flex aspect-[4/3]">
     <div
-      class='transition absolute z-10 w-12 h-12 p-2 rounded-full bg-white group-hover:bg-primary-500 group-hover:dark:bg-primary-300 flex items-center justify-center right-5 top-5 text-dark -rotate-45 group-hover:rotate-0 group-hover:scale-125 group-hover:-translate-y-2 group-hover:translate-x-2'
+      class="transition absolute z-10 w-12 h-12 p-2 rounded-full bg-white group-hover:bg-primary-500 group-hover:dark:bg-primary-300 flex items-center justify-center right-5 top-5 text-dark -rotate-45 group-hover:rotate-0 group-hover:scale-125 group-hover:-translate-y-2 group-hover:translate-x-2"
     >
-      <GoArrowRight className='w-full h-full ' />
+      <GoArrowRight className="w-full h-full " />
     </div>
     <div
-      class='w-full flex flex-col gap-3 justify-end items-start relative z-20 inset-0 p-6 md:p-9'
+      class="w-full flex flex-col gap-3 justify-end items-start relative z-20 inset-0 p-6 md:p-9"
     >
-      <Typography class='h5 transition-colors text-white/70 group-hover:text-white'>
+      <Typography
+        class="h5 transition-colors text-white/70 group-hover:text-white"
+      >
         {category}
       </Typography>
-      <Typography type='h3' class='h4 transition-colors text-white group-hover:text-primary-500 group-hover:dark:text-primary-300' transition:name="page-title">
+      <Typography
+        type="h3"
+        class="h4 transition-colors text-white group-hover:text-primary-500 group-hover:dark:text-primary-300"
+        transition:name={`project-title-${name}`}
+      >
         {title}
       </Typography>
     </div>
     {
       image && (
-        <div class='mask-linear absolute inset-0 transition-transform overflow-clip group-hover:scale-105 rounded-4xl'>
+        <div class="mask-linear absolute inset-0 transition-transform overflow-clip group-hover:scale-105 rounded-4xl">
           <Image
             src={image.medium}
-            class='w-full h-full object-cover rounded-4xl'
+            class="w-full h-full object-cover rounded-4xl"
             alt={title}
             transition:name={`project-image-${name}`}
             width={768}
             height={576}
           />
-          <div class='transition-transform absolute inset-0 bg-gradient-to-t from-dark to-dark/0 z-10 rounded-4xl translate-y-1/4 group-hover:translate-y-0 hidden' />
+          <div class="transition-transform absolute inset-0 bg-gradient-to-t from-dark to-dark/0 z-10 rounded-4xl translate-y-1/4 group-hover:translate-y-0 hidden" />
         </div>
       )
     }
   </a>
 </article>
 
-
 <style>
   .card__image {
-    mask-image: linear-gradient(to bottom,rgba(0,0,0,1) 40%, transparent 90%)
+    mask-image: linear-gradient(
+      to bottom,
+      rgba(0, 0, 0, 1) 40%,
+      transparent 90%
+    );
   }
 </style>
