--- a/src/components/sections/AllProjects.astro
+++ b/src/components/sections/AllProjects.astro
@@ -1,17 +1,39 @@
 ---
-import { getLangFromUrl } from '../../i18n/utils';
-import type { Langs, ProjectWithLang } from '../../types';
-import { filterProjects } from '../../utils';
-import { ProjectsList } from '../index.astro';
+import { getLangFromUrl } from "../../i18n/utils";
+import type { Langs, Project } from "../../types";
+import { filterProjects } from "../../utils";
+import { ProjectsList } from "../index.astro";
 
 const lang = getLangFromUrl(Astro.url) as Langs;
 
-const projects: ProjectWithLang[] = await Astro.glob('../../content/projects/*.json');
-const projectList = await filterProjects({ projects, lang });
+const projects = await Astro.glob("../../content/projects/**/*.mdx");
+const projectList: Project[] = projects
+  .filter((p) => p.frontmatter.lang === lang)
+  .map(
+    ({
+      frontmatter: { lang, name, title, category, images, description },
+      Content,
+    }) => ({
+      lang,
+      name,
+      title,
+      category,
+      images,
+      description,
+      Content,
+    })
+  );
+
+console.log("projectList", projectList);
+
+// console.log('projects', projects.map((p) => ({
+//   ...p.frontmatter,
+//   Content: p.Content
+// })));
 ---
 
-<section class='flex items-center justify-center px-5 py-14 md:pb-40'>
-  <div class='container'>
+<section class="flex items-center justify-center px-5 py-14 md:pb-40">
+  <div class="container">
     <ProjectsList projects={projectList} />
   </div>
 </section>
